# enumStateMachine

./: CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt  baseTest.cpp
